  termination procedures. The previous failure to do so lead to missing
  output at the end of the document if it did not fit on the current page.
* troff, dpost: OpenType and TrueType fonts with Unicode platformID cmap
  tables are now supported for reading Unicode character mapping tables.
  Previously, only Microsoft platformID cmap tables were supported, and
  others were ignored.
* [nt]roff: ".ev \}" has now been actually fixed (Bugreport by Dirk-Wilhelm
  Peters.)
* -man macros: ".P" is now recognized; it is the same as ".PP".
* Unix 6th Edition manual macro packages have been added.
* -mandoc macros: Recognize Unix 6th Edition pages.

Release 070202
* [nt]roff: The "\J" escape sequence has been introduced to specify a
  default line breaking penalty; useful to discourage line breaks within
  a person's name or a formula. Relative values in the "\j" sequence now
  refer to the default penalty value.
* dpost: A manual page has been added since it has now been released by
  Sun under the CDDL license.
* -man macros: The ".TP" macro has been fixed not to spread the initial
  string. This is particularly for use in combination with "-mpadj" since
  paragraph-at-once line breaking can lead to more spreading in the first
  line.
* [nt]roff: Special characters like "\}" do now terminate environment
  names in arguments to the ".ev" and ".evc" requests as with other names.
  Thus ".ev \}" is no longer misinterpreted as an attempt to change to an
  environment named "\}". (Bugreport by Dirk-Wilhelm Peters.)
* dpost: Cast size_t arguments to long for printf (Stefan Tramm).
* The reference manual now uses the free TeX Gyre Termes fonts available
  from <http://www.janusz.nowacki.strefa.pl/>. For this and the other
  documentation texts, README files have been added to explain which
  fonts are needed in order to build them. (Thanks to Werner Lemberg for
  notification.)
* Several manual pages have been moved from "BSD Compatibility" to the